--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="import_lv_lbl">Importe</string>
     <string name="confirm_btn_str">CONFIRMAR</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="time_over">00:00</string>
 
     <!-- Preference Titles -->
     <string name="server_header">Datos de Servidor</string>
